--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: white;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: initial;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #1976D2;
 }
 
 .App-link {
@@ -35,4 +35,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+#add {
+  margin: 10px;
 }
